added more images and changes in content

--- a/index.html
+++ b/index.html
@@ -51,8 +51,7 @@
       name="twitter:description"
       content="Premium commercial properties in Vapi offering luxury office spaces."
     />
-    <!-- Preload critical resources -->
-    <link rel="preload" href="assets/img/hero/hero_bg_1.jpg" as="image" />
+
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
@@ -284,7 +283,7 @@
             width="320"
             height="240"
             preload="auto"
-            poster="assets/img/video-poster.jpg"
+            poster="assets/img/hero/video-poster.png"
           >
             <source src="assets/img/hero/preloader.mp4" type="video/mp4" />
           </video>
@@ -336,9 +335,21 @@
                 ><img src="assets/img/VVIP logo-01.png" alt="VVIP"
               /></a>
             </div>
-            <p class="about-text">
-              Rapidiously myocardinate cross-platform intellectual capital
-              model. Appropriately create interactive infrastructures
+            <h5>The Key To VAPI’S VIP Era.</h5>
+            <p class="about-text" style="text-align: justify">
+              This isn’t just a commercial address, it’s an experience curated
+              for those who lead, inspire, and redefine success. From the moment
+              you arrive, every detail of this iconic landmark whispers one
+              truth: you’re not just important, you’re a VVIP. Here, VVIP isn’t
+              a title; it’s a feeling. It’s in the grand arrival, the precision
+              of every finish, and the unmistakable aura of power and prestige
+              that surrounds you. This is where ambition meets its perfect
+              match, where business happens on your terms, in an environment
+              that echoes your vision, your stature, and your drive for
+              excellence. You’ve worked for it. You’ve earned it. And now,
+              you’re exactly where you belong. The throne isn’t just symbolic;
+              it’s your rightful place. Welcome to VVIP, where the
+              extraordinary do business.
             </p>
           </div>
         </div>
@@ -372,7 +383,9 @@
               </div>
               <div class="details">
                 <p>
-                  <a href="mailto:VVIP.com" class="info-box_link">VVIP.com</a>
+                  <a href="Mail@vapisvip.com" class="info-box_link"
+                    >Mail@vapisvip.com</a
+                  >
                 </p>
               </div>
             </div>
@@ -482,7 +495,7 @@ Hero Area
             >
               <div
                 class="th-hero-bg"
-                data-bg-src="assets/img/hero/banner-2.webp"
+                data-bg-src="assets/img/hero/Banner-01.webp"
               ></div>
               <div class="hero-big-text">VVIP</div>
               <div class="container">
@@ -545,7 +558,7 @@ Hero Area
             >
               <div
                 class="th-hero-bg"
-                data-bg-src="assets/img/hero/banner-3.webp"
+                data-bg-src="assets/img/hero/Banner-02.webp"
               ></div>
               <div class="hero-big-text">VVIP</div>
               <div class="container">
@@ -604,7 +617,7 @@ Hero Area
             >
               <div
                 class="th-hero-bg"
-                data-bg-src="assets/img/hero/banner-1.webp"
+                data-bg-src="assets/img/hero/Banner-03.webp"
               ></div>
               <div class="hero-big-text">VVIP</div>
               <div class="container">
@@ -730,9 +743,17 @@ About Area
             <div class="title-area">
               <span class="shadow-title">About</span>
               <h2 class="sec-title text-white">About Us</h2>
-              <p class="sec-text text-white">
-                We are a real estate firm with over 20 years of expertise, and
-                our main goal is to provide amazing locations to our partners.
+
+              <p class="sec-text text-white" style="text-align: justify">
+                Neo Vista is a symbol of success and a benchmark of prestige
+                <br />
+                A visionary twin tower marvel, it redefines the city’s business
+                landscape with an unmistakable aura of luxury. Strategically
+                located in the heart of Vapi, it rises with purpose, offering a
+                seamless blend of architectural excellence, thoughtful planning,
+                and elite amenities. From grand valet arrivals and gallery
+                inspired foyers to designer offices and a dedicated hospital
+                tower, every detail is curated for those who demand more.
               </p>
             </div>
           </div>
@@ -751,7 +772,7 @@ About Area
                 class="img1 img-shine"
                 data-mask-src="assets/img/shape/about-1-mask.png"
               >
-                <img src="assets/img/hero/CAM_01_02.jpg" alt="About" />
+                <img src="assets/img/hero/About image-01.webp" alt="About" />
               </div>
             </div>
           </div>
@@ -761,7 +782,7 @@ About Area
                 class="img1 img-shine"
                 data-mask-src="assets/img/shape/about-1-mask.png"
               >
-                <img src="assets/img/hero/Cam_02_02.jpg" alt="About" />
+                <img src="assets/img/hero/About image-02.webp" alt="About" />
               </div>
             </div>
           </div>
@@ -771,16 +792,22 @@ About Area
             <div class="col-xl-3 text-xl-end">
               <div class="about-tag">
                 <div class="about-experience-tag"></div>
-                <div class="about-tag-thumb">
+                <!-- <div class="about-tag-thumb">
                   <img src="assets/img/hero/CAM_03_02.jpg" alt="img" />
-                </div>
+                </div> -->
               </div>
             </div>
             <div class="col-xl-9">
               <div class="about-wrap1">
-                <p class="about-text text-white">
-                  All-inclusive real estate services to facilitate the easy and
-                  confident purchase, sale, and management of your properties.
+                <h3 class="text-white">
+                  Two Towers. One Vision. Infinite Impact.
+                </h3>
+                <p class="text-white" style="text-align: justify">
+                  Every landmark has a purpose. VAPI’S VIP is a transformative
+                  vision that unites business, healthcare, hospitality and
+                  lifestyle under one iconic address. Rising proudly above the
+                  city, its twin towers redefine what it means to
+                  build for the future.
                 </p>
               </div>
             </div>
@@ -806,13 +833,13 @@ Service Area
               </div>
               <div class="box-content">
                 <h3 class="box-title">
-                  <a href="property-details.html"
-                    >A Masterpiece of Business Luxury</a
-                  >
+                  <a href="#">Tower - A The Powerhouse of Business </a>
                 </h3>
-                <p class="box-text">
-                  High-Speed Connectivity & Smart Office Solutions – Designed
-                  for efficiency and excellence.
+                <p class="box-text" style="text-align: justify">
+                  From elite lounges and designer offices to curated retail and
+                  sky lounges, this is where the top 1% come to build, grow, and
+                  lead. A luxury-first approach to business infrastructure
+                  tailored for entrepreneurs and empire builders
                 </p>
               </div>
             </div>
@@ -827,12 +854,13 @@ Service Area
               <div class="box-content">
                 <h3 class="box-title">
                   <a href="property-details.html"
-                    >Designed for the Discerning Few</a
-                  >
+                    >Tower A's Dedicated Retail Showrooms.
+                  </a>
                 </h3>
-                <p class="box-text">
-                  Premium F&B Outlets & Luxury Hospitality Services – Indulge in
-                  the finest
+                <p class="box-text" style="text-align: justify">
+                  a curated space where luxury brands meet discerning buyers in
+                  an atmosphere of elegance and exclusivity. More than retail,
+                  it's a statement of prestige.
                 </p>
               </div>
             </div>
@@ -846,11 +874,13 @@ Service Area
               </div>
               <div class="box-content">
                 <h3 class="box-title">
-                  <a href="property-details.html">Invest Opportunities</a>
+                  <a href="property-details.html"
+                    >Tower - B Vapi’s Most Advanced Healthcare & Hospitality Hub
+                  </a>
                 </h3>
-                <p class="box-text">
-                  Sustainable & Future-Ready Infrastructure – Combining
-                  eco-consciousness with innovation
+                <p class="box-text" style="text-align: justify">
+                  Tower B is meticulously designed as a future-forward space,
+                  ideal for both healthcare and hospitality ventures.
                 </p>
               </div>
             </div>
@@ -864,7 +894,12 @@ Portfolio Area
 ==============================-->
     <section
       class="project-area-1 space overflow-hidden"
-      data-bg-src="assets/img/hero/CAM_03_02.jpg"
+      style="
+        background-image: url('assets/img/hero/Showroom Space.webp');
+        background-size: cover;
+        background-position: center center;
+        background-repeat: no-repeat;
+      "
       data-opacity="5"
       data-overlay="title"
     >
@@ -910,18 +945,18 @@ Portfolio Area
                           class="portfolio-img img-shine"
                           data-mask-src="assets/img/shape/project-card1-img-mask.png"
                         >
-                          <img
+                          <!-- <img
                             src="assets/img/hero/Cam_08_02.jpg"
                             alt="project image"
-                          />
+                          /> -->
                           <div
                             class="portfolio-card-shape"
                             data-mask-src="assets/img/shape/project-card1-img-mask.png"
                           >
-                            <img
+                            <!-- <img
                               src="assets/img/hero/Cam_08_02.jpg"
                               alt="img"
-                            />
+                            /> -->
                           </div>
                         </div>
                         <div class="portfolio-content"></div>
@@ -934,15 +969,15 @@ Portfolio Area
                           class="portfolio-img img-shine"
                           data-mask-src="assets/img/shape/project-card1-img-mask.png"
                         >
-                          <img
+                          <!-- <img
                             src="assets/img/hero/Cam_07.jpg"
                             alt="project image"
-                          />
+                          /> -->
                           <div
                             class="portfolio-card-shape"
                             data-mask-src="assets/img/shape/project-card1-img-mask.png"
                           >
-                            <img src="assets/img/hero/Cam_07.jpg" alt="img" />
+                            <!-- <img src="assets/img/hero/Cam_07.jpg" alt="img" /> -->
                           </div>
                         </div>
                         <div class="portfolio-content"></div>
@@ -955,18 +990,18 @@ Portfolio Area
                           class="portfolio-img img-shine"
                           data-mask-src="assets/img/shape/project-card1-img-mask.png"
                         >
-                          <img
+                          <!-- <img
                             src="assets/img/hero/Cam_06_02.jpg"
                             alt="project image"
-                          />
+                          /> -->
                           <div
                             class="portfolio-card-shape"
                             data-mask-src="assets/img/shape/project-card1-img-mask.png"
                           >
-                            <img
+                            <!-- <img
                               src="assets/img/hero/Cam_06_02.jpg"
                               alt="img"
-                            />
+                            /> -->
                           </div>
                         </div>
                         <div class="portfolio-content"></div>
@@ -979,18 +1014,18 @@ Portfolio Area
                           class="portfolio-img img-shine"
                           data-mask-src="assets/img/shape/project-card1-img-mask.png"
                         >
-                          <img
+                          <!-- <img
                             src="assets/img/hero/Cam_08_02.jpg"
                             alt="project image"
-                          />
+                          /> -->
                           <div
                             class="portfolio-card-shape"
                             data-mask-src="assets/img/shape/project-card1-img-mask.png"
                           >
-                            <img
+                            <!-- <img
                               src="assets/img/hero/Cam_08_02.jpg"
                               alt="img"
-                            />
+                            /> -->
                           </div>
                         </div>
                         <div class="portfolio-content"></div>
@@ -1598,9 +1633,7 @@ Contact Area
                 <div class="about-contact-details">
                   <h6 class="about-contact-details-title">Email Address</h6>
                   <p class="about-contact-details-text">
-                    <a href="mailto:itsmeDezino@gmail.com"
-                      >itsmeDezino@gmail.com</a
-                    >
+                    <a href="mailto:mail@vapisvip.com">mail@vapisvip.com</a>
                   </p>
                 </div>
               </div>
@@ -1614,7 +1647,6 @@ Contact Area
 ==============================-->
       <div
         class="space contact-area-3 z-index-common"
-        data-bg-src="assets/img/hero/contact_bg.jpg"
         data-overlay="title"
         data-opacity="3"
         id="contact-sec"
@@ -1895,7 +1927,7 @@ Contact Area
     <script src="assets/js/main.js" defer></script>
 
     <!-- Modal Script with SEO considerations -->
-    <!-- <script>
+    <script>
       document.addEventListener("DOMContentLoaded", function () {
         const modal = document.getElementById("contactModal");
         const closeBtn = document.querySelector(".modal-close");
@@ -1946,6 +1978,6 @@ Contact Area
           formSubmitted = true;
         }
       });
-    </script> -->
+    </script>
   </body>
 </html>
