added aminities image

--- a/index.html
+++ b/index.html
@@ -1067,7 +1067,7 @@ Property Area
             data-mask-src="assets/img/shape/property-card1-img-mask.png"
           >
             <img
-              src="assets/img/hero//office_passage_image.jpg"
+              src="assets/img/hero/amenites-01.webp"
               alt="img"
               style="height: 370px"
             />
@@ -1092,7 +1092,7 @@ Property Area
             data-mask-src="assets/img/shape/property-card1-img-mask.png"
           >
             <img
-              src="assets/img/hero//hotel_foyer_image.jpg"
+              src="assets/img/hero/amenites-02.webp"
               alt="img"
               style="height: 370px"
             />
@@ -1116,7 +1116,7 @@ Property Area
             data-mask-src="assets/img/shape/property-card1-img-mask.png"
           >
             <img
-              src="assets/img/hero//office_image.jpg"
+              src="assets/img/hero/amenites-03.webp"
               alt="img"
               style="height: 370px"
             />
@@ -1142,7 +1142,7 @@ Property Area
             data-mask-src="assets/img/shape/property-card1-img-mask.png"
           >
             <img
-              src="assets/img/hero//twin_tower_image.jpg"
+              src="assets/img/hero/amenites-04.webp"
               alt="img"
               style="height: 370px"
             />
