updated content of aminities

--- a/index.html
+++ b/index.html
@@ -1075,11 +1075,14 @@ Property Area
           <div class="property-card">
             <div class="property-card-number">01</div>
             <div class="property-card-details">
-              <span class="property-card-subtitle">Office Passage</span>
-              <h4 class="property-card-title"><a href="#">Passage</a></h4>
+              <span class="property-card-subtitle">valet parking</span>
+              <h4 class="property-card-title">
+                <a href="#">Because Time is Prestige </a>
+              </h4>
               <p class="property-card-text">
-                Rapidiously myocardinate cross-platform intellectual capital
-                model. Appropriately create interactive infrastructures
+                NeoVista is the first commercial project in Vapi to offer valet
+                service — for both business and healthcare users, catering to
+                Vapi's VIP community.
               </p>
               <div class="property-card-price-meta"></div>
             </div>
@@ -1100,11 +1103,13 @@ Property Area
           <div class="property-card">
             <div class="property-card-number">02</div>
             <div class="property-card-details">
-              <span class="property-card-subtitle">Hotel</span>
-              <h4 class="property-card-title"><a href="#">Hotel Foyer</a></h4>
+              <span class="property-card-subtitle">Entry</span>
+              <h4 class="property-card-title">
+                <a href="#">Flow, Function & First-Class Access </a>
+              </h4>
               <p class="property-card-text">
-                Rapidiously myocardinate cross-platform intellectual capital
-                model. Appropriately create interactive infrastructures
+                Thoughtful drop-off points ensure seamless navigation for office
+                users, visitors, and patients.
               </p>
             </div>
           </div>
@@ -1124,13 +1129,13 @@ Property Area
           <div class="property-card">
             <div class="property-card-number">03</div>
             <div class="property-card-details">
-              <span class="property-card-subtitle">Office</span>
+              <span class="property-card-subtitle">Waiting Lobby</span>
               <h4 class="property-card-title">
-                <a href="#">Office Building</a>
+                <a href="#">First Impressions, The Royal One! </a>
               </h4>
               <p class="property-card-text">
-                Rapidiously myocardinate cross-platform intellectual capital
-                model. Appropriately create interactive infrastructures
+                Bow down to timeless elegance. Where every detail speaks of
+                royalty. NeoVista greets every visitor with grandeur.
               </p>
             </div>
           </div>
@@ -1150,11 +1155,13 @@ Property Area
           <div class="property-card">
             <div class="property-card-number">04</div>
             <div class="property-card-details">
-              <span class="property-card-subtitle"> Towers</span>
-              <h4 class="property-card-title"><a href="#">Twin Tower</a></h4>
+              <span class="property-card-subtitle"> Passage</span>
+              <h4 class="property-card-title">
+                <a href="#">A State-Of-The-Art Lobby </a>
+              </h4>
               <p class="property-card-text">
-                Rapidiously myocardinate cross-platform intellectual capital
-                model. Appropriately create interactive infrastructures
+                with expansive ten-foot-long gallery displays designed to
+                captivate, inspire, and elevate every impression.
               </p>
             </div>
           </div>
