--- a/index.html
+++ b/index.html
@@ -185,75 +185,77 @@
     <!-- Contact Modal -->
     <div id="contactModal" class="modal-overlay">
       <div class="modal-container">
-        <span class="modal-close">&times;</span>
-        <div class="appointment-wrap2 bg-white">
-          <h2 class="form-title text-theme">Schedule a visit</h2>
-          <form
-            action="mail.php"
-            method="POST"
-            class="appointment-form ajax-contact"
-          >
-            <div class="row">
-              <div class="form-group style-border style-radius col-12">
-                <input
-                  type="text"
-                  class="form-control"
-                  name="name"
-                  id="modal-name"
-                  placeholder="Your Name*"
-                  required
-                />
-                <i class="fal fa-user"></i>
+        <div class="modal-content">
+          <button class="modal-close" aria-label="Close modal">&times;</button>
+          <div class="appointment-wrap2 bg-white">
+            <h2 class="form-title text-theme">Schedule a visit</h2>
+            <form
+              action="mail.php"
+              method="POST"
+              class="appointment-form ajax-contact"
+            >
+              <div class="row">
+                <div class="form-group style-border style-radius col-12">
+                  <input
+                    type="text"
+                    class="form-control"
+                    name="name"
+                    id="modal-name"
+                    placeholder="Your Name*"
+                    required
+                  />
+                  <i class="fal fa-user"></i>
+                </div>
+                <div class="form-group style-border style-radius col-12">
+                  <input
+                    type="email"
+                    class="form-control"
+                    name="email"
+                    id="modal-email"
+                    placeholder="Your Email*"
+                    required
+                  />
+                  <i class="fal fa-envelope"></i>
+                </div>
+                <div class="form-group style-border style-radius col-md-12">
+                  <select
+                    name="subject"
+                    id="modal-subject"
+                    class="form-select"
+                    required
+                  >
+                    <option value="" disabled selected hidden>
+                      Select Service Type
+                    </option>
+                    <option value="Real Estate">Real Estate</option>
+                    <option value="Apartment">Apartment</option>
+                    <option value="Residencial">Residencial</option>
+                    <option value="Deluxe">Deluxe</option>
+                  </select>
+                  <i class="fal fa-angle-down"></i>
+                </div>
+                <div class="col-12 form-group style-border style-radius">
+                  <i class="far fa-comments"></i>
+                  <textarea
+                    placeholder="Type Your Message"
+                    class="form-control"
+                    name="message"
+                    id="modal-message"
+                    required
+                  ></textarea>
+                </div>
+                <div class="col-12 form-btn mt-4">
+                  <button type="submit" class="th-btn">
+                    Submit Message
+                    <span class="btn-icon"
+                      ><img src="assets/img/icon/paper-plane.svg" alt="submit"
+                    /></span>
+                  </button>
+                </div>
               </div>
-              <div class="form-group style-border style-radius col-12">
-                <input
-                  type="email"
-                  class="form-control"
-                  name="email"
-                  id="modal-email"
-                  placeholder="Your Email*"
-                  required
-                />
-                <i class="fal fa-envelope"></i>
-              </div>
-              <div class="form-group style-border style-radius col-md-12">
-                <select
-                  name="subject"
-                  id="modal-subject"
-                  class="form-select"
-                  required
-                >
-                  <option value="" disabled selected hidden>
-                    Select Service Type
-                  </option>
-                  <option value="Real Estate">Real Estate</option>
-                  <option value="Apartment">Apartment</option>
-                  <option value="Residencial">Residencial</option>
-                  <option value="Deluxe">Deluxe</option>
-                </select>
-                <i class="fal fa-angle-down"></i>
-              </div>
-              <div class="col-12 form-group style-border style-radius">
-                <i class="far fa-comments"></i>
-                <textarea
-                  placeholder="Type Your Message"
-                  class="form-control"
-                  name="message"
-                  id="modal-message"
-                  required
-                ></textarea>
-              </div>
-              <div class="col-12 form-btn mt-4">
-                <button type="submit" class="th-btn">
-                  Submit Message
-                  <span class="btn-icon"
-                    ><img src="assets/img/icon/paper-plane.svg" alt="submit"
-                  /></span>
-                </button>
-              </div>
-            </div>
-            <p class="form-messages mb-0 mt-3"></p>
-          </form>
+              <p class="form-messages mb-0 mt-3"></p>
+            </form>
+          </div>
         </div>
       </div>
     </div>
@@ -465,24 +467,82 @@
     <!--==============================
 Hero Area
 ==============================-->
-    <div class="hero-1" id="hero">
+    <div
+      class="hero-1"
+      id="hero"
+      style="
+        padding-top: 120px;
+        position: relative;
+        min-height: 100vh;
+        overflow: hidden;
+      "
+    >
       <div
         class="swiper th-slider hero-slider1"
         id="heroSlide1"
         data-slider-options='{"effect":"fade", "autoHeight": "true"}'
+        style="
+          height: auto;
+          min-height: 100vh;
+          margin-top: -165px;
+          transform: translate(0, 165px);
+        "
       >
         <div class="swiper-wrapper">
           <div class="swiper-slide">
             <div
               class="hero-inner"
               data-mask-src="assets/img/hero/hero_1_bg_mask.png"
+              style="
+                position: relative;
+                height: 100%;
+                min-height: 100vh;
+                display: flex;
+                flex-direction: column;
+                justify-content: center;
+              "
             >
               <div
                 class="th-hero-bg"
                 data-bg-src="assets/img/hero/Banner-01.webp"
+                style="
+                  position: absolute;
+                  top: 0;
+                  left: 0;
+                  width: 100%;
+                  height: 100%;
+                  background-size: cover;
+                  background-position: center center;
+                  background-repeat: no-repeat;
+                  z-index: -1;
+                "
               ></div>
-              <div class="hero-big-text">VVIP</div>
-              <div class="container">
+              <div
+                class="hero-big-text"
+                style="
+                  position: absolute;
+                  bottom: -30px;
+                  font-size: 15vw;
+                  font-family: var(--title-font);
+                  font-weight: 500;
+                  line-height: 1;
+                  -webkit-text-fill-color: transparent;
+                  -webkit-text-stroke: 1px var(--white-color);
+                  opacity: 0.2;
+                  z-index: 1;
+                "
+              >
+                VVIP
+              </div>
+              <div
+                class="container"
+                style="
+                  position: relative;
+                  z-index: 2;
+                  padding-top: 100px;
+                  padding-bottom: 100px;
+                "
+              >
                 <div class="row align-items-center">
                   <div class="col-lg-8">
                     <div class="hero-style1">
@@ -602,6 +662,7 @@ Hero Area
               <div
                 class="th-hero-bg"
                 data-bg-src="assets/img/hero/Banner-03.webp"
+                style="background-position: left center !important"
               ></div>
               <div class="hero-big-text">VVIP</div>
               <div class="container">
@@ -1495,11 +1556,11 @@ Video Area
         <div class="video-wrap1">
           <div class="video-box1">
             <img src="assets/img/hero/appartment_image.jpg" alt="img" />
-            <a
+            <!-- <a
               href="https://www.youtube.com/watch?v=_sI_Ps7JSEk"
               class="play-btn style3 popup-video"
               ><i class="fa-sharp fa-solid fa-play"></i
-            ></a>
+            ></a> -->
           </div>
           <div class="video-wrap-details">
             <div class="title-area mb-45">
@@ -1520,15 +1581,15 @@ Video Area
             <div class="author-grid">
               <div class="author-profile">
                 <div class="avater">
-                  <img src="assets/img/normal/author_1_1.png" alt="img" />
+                  <!-- <img src="assets/img/normal/author_1_1.png" alt="img" /> -->
                 </div>
                 <div class="media-body">
-                  <h5 class="author-profile-name">Basila Smith</h5>
-                  <p class="author-desig">CEO of Realar</p>
+                  <!-- <h5 class="author-profile-name">Basila Smith</h5>
+                  <p class="author-desig">CEO of Realar</p> -->
                 </div>
               </div>
               <div class="author-sign">
-                <img src="assets/img/normal/sign_1_1.png" alt="img" />
+                <!-- <img src="assets/img/normal/sign_1_1.png" alt="img" /> -->
               </div>
             </div>
           </div>
@@ -1882,6 +1943,68 @@ Contact Area
       </svg>
     </div>
 
+    <style>
+      @media (max-width: 991px) {
+        .hero-1 {
+          padding-top: 110px !important;
+          min-height: auto !important;
+          padding-bottom: 0 !important;
+        }
+
+        .hero-slider1 {
+          margin-left: 15px !important;
+          margin-right: 15px !important;
+          min-height: 80vh !important;
+          transform: none !important;
+          margin-top: 0 !important;
+        }
+
+        .hero-style1 {
+          padding: 80px 20px 60px !important;
+        }
+
+        .hero-title {
+          font-size: 2rem !important;
+          margin-bottom: 15px !important;
+        }
+
+        .hero-text {
+          font-size: 14px !important;
+          margin-bottom: 30px !important;
+        }
+      }
+
+      @media (max-width: 767px) {
+        .hero-slider1 {
+          min-height: 70vh !important;
+        }
+
+        .th-hero-bg {
+          background-position: 92% center !important;
+        }
+
+        .hero-big-text {
+          font-size: 100px !important;
+          bottom: -20px !important;
+        }
+      }
+
+      @media (max-width: 575px) {
+        .hero-slider1 {
+          min-height: 60vh !important;
+          margin-left: 10px !important;
+          margin-right: 10px !important;
+        }
+
+        .hero-style1 {
+          padding: 60px 0 40px !important;
+        }
+
+        .hero-title {
+          font-size: 1.8rem !important;
+        }
+      }
+    </style>
     <!--==============================
     All Js File
 ============================== -->
@@ -1918,24 +2041,39 @@ Contact Area
         const closeBtn = document.querySelector(".modal-close");
         let modalTimer;
         let formSubmitted = false;
+        let initialTimerStarted = false;
 
+        // Show modal function with improved behavior
         function showModal() {
-          if (!formSubmitted) {
+          if (!formSubmitted && !modal.classList.contains("active")) {
             modal.classList.add("active");
             document.body.style.overflow = "hidden";
+            document.documentElement.style.overflow = "hidden";
 
-            // Set focus on first input
-            document.getElementById("modal-name").focus();
+            // Set focus on first input and ensure it's accessible
+            const firstNameInput = document.getElementById("modal-name");
+            if (firstNameInput) {
+              setTimeout(
+                () => firstNameInput.focus({ preventScroll: true }),
+                100
+              );
+            }
 
             // Reset timer when modal is shown
             resetModalTimer();
           }
         }
 
-        // Close modal function
+        // Close modal function with improved behavior
         function closeModal() {
           modal.classList.remove("active");
           document.body.style.overflow = "";
+          document.documentElement.style.overflow = "";
+
+          // Reset the timer when user closes manually
+          if (!initialTimerStarted) {
+            startInitialTimer();
+          }
         }
 
         // Reset the 60-second timer
@@ -1944,22 +2082,54 @@ Contact Area
           modalTimer = setTimeout(showModal, 60000); // 60 seconds
         }
 
-        // Event listeners
+        // Start the initial 4-second timer
+        function startInitialTimer() {
+          initialTimerStarted = true;
+          setTimeout(showModal, 4000);
+        }
+
+        // Event listeners with improved handling
         closeBtn.addEventListener("click", closeModal);
 
-        // Close when clicking outside modal
+        // Close when clicking outside modal (improved detection)
         modal.addEventListener("click", function (e) {
-          if (e.target === modal) {
+          if (
+            e.target === modal ||
+            e.target.classList.contains("modal-overlay")
+          ) {
             closeModal();
           }
         });
 
-        // Show modal on page load after 3 seconds
-        setTimeout(showModal, 4000);
+        // Close with Escape key
+        document.addEventListener("keydown", function (e) {
+          if (e.key === "Escape" && modal.classList.contains("active")) {
+            closeModal();
+          }
+        });
 
-        // Optional: Don't show modal if user has already submitted form (using sessionStorage)
+        // Prevent modal from closing when clicking inside content
+        document
+          .querySelector(".modal-content")
+          .addEventListener("click", function (e) {
+            e.stopPropagation();
+          });
+
+        // Check form submission status
         if (sessionStorage.getItem("formSubmitted")) {
           formSubmitted = true;
+        } else {
+          // Start the initial timer only if form hasn't been submitted
+          startInitialTimer();
+        }
+
+        // Optional: Track form submission
+        const contactForm = document.querySelector(".appointment-form");
+        if (contactForm) {
+          contactForm.addEventListener("submit", function () {
+            formSubmitted = true;
+            sessionStorage.setItem("formSubmitted", "true");
+          });
         }
       });
     </script>
