--- a/index.html
+++ b/index.html
@@ -1555,7 +1555,7 @@ Video Area
       <div class="video-area-1">
         <div class="video-wrap1">
           <div class="video-box1">
-            <img src="assets/img/hero/appartment_image.jpg" alt="img" />
+            <img src="assets/img/hero/inside-image.webp" alt="img" />
             <!-- <a
               href="https://www.youtube.com/watch?v=_sI_Ps7JSEk"
               class="play-btn style3 popup-video"
