final changes said by sachin about logo and some content changes

--- a/index.html
+++ b/index.html
@@ -281,7 +281,7 @@
         <button class="th-menu-toggle"><i class="fal fa-times"></i></button>
         <div class="mobile-logo">
           <a href="index.html">
-            <img src="assets/img/VVIP logo-01.png" alt="VVIP" />
+            <img src="assets/img/VVIP full gold-01.png" alt="VVIP" />
           </a>
         </div>
         <div class="th-mobile-menu">
@@ -314,24 +314,16 @@
           <div class="th-widget-about">
             <div class="about-logo">
               <a href="index.html"
-                ><img src="assets/img/VVIP logo-01.png" alt="VVIP"
+                ><img src="assets/img/VVIP full gold-01.png" alt="VVIP"
               /></a>
             </div>
             <h5>The Key To VAPI’S VIP Era.</h5>
             <p class="about-text" style="text-align: justify">
-              This isn’t just a commercial address, it’s an experience curated
-              for those who lead, inspire, and redefine success. From the moment
-              you arrive, every detail of this iconic landmark whispers one
-              truth: you’re not just important, you’re a VVIP. Here, VVIP isn’t
-              a title; it’s a feeling. It’s in the grand arrival, the precision
-              of every finish, and the unmistakable aura of power and prestige
-              that surrounds you. This is where ambition meets its perfect
-              match, where business happens on your terms, in an environment
-              that echoes your vision, your stature, and your drive for
-              excellence. You’ve worked for it. You’ve earned it. And now,
-              you’re exactly where you belong. The throne isn’t just symbolic;
-              it’s your rightful place. Welcome to VVIP, where the
-              extraordinary do business.
+              This isn’t just an address, it’s an experience for those who lead,
+              inspire, and redefine success. From the grand arrival to every
+              flawless detail, VVIP is more than a title, it’s a feeling. Here,
+              ambition meets prestige. You’ve earned this. Welcome to VVIP:
+              where the extraordinary do business.
             </p>
           </div>
         </div>
@@ -343,8 +335,12 @@
                 <img src="assets/img/icon/location-dot.svg" alt="img" />
               </div>
               <div class="details">
-                <p>Vapi</p>
-                <p></p>
+                <p>Location</p>
+                <p>
+                  NeoVista, Nr, Forest Ply & Hardware, 4 Rasta, Silvassa - Vapi
+                  Rd, opp. Solitaire Business Center, Imran Nagar, Daman, Vapi,
+                  Gujarat 396191
+                </p>
               </div>
             </div>
             <div class="info-box_text">
@@ -352,9 +348,10 @@
                 <img src="assets/img/icon/phone.svg" alt="img" />
               </div>
               <div class="details">
+                <p>Phone</p>
                 <p>
-                  <a href="tel:+91 991370584" class="info-box_link"
-                    >+91 991370584</a
+                  <a href="tel:+91 90813 37700" class="info-box_link"
+                    >+91 90813 37700</a
                   >
                 </p>
               </div>
@@ -364,6 +361,7 @@
                 <img src="assets/img/icon/envelope.svg" alt="img" />
               </div>
               <div class="details">
+                <p>Mail</p>
                 <p>
                   <a href="Mail@vapisvip.com" class="info-box_link"
                     >Mail@vapisvip.com</a
@@ -374,7 +372,7 @@
           </div>
         </div>
         <div class="widget newsletter-widget">
-          <h3 class="widget_title">Subscribe Now</h3>
+          <h3 class="widget_title">Contact Us Now</h3>
 
           <div class="th-social style2">
             <a
@@ -382,18 +380,14 @@
               target="_blank"
               ><i class="fab fa-facebook-f"></i
             ></a>
-            <a href="https://www.twitter.com/"
-              ><i class="fab fa-twitter"></i
+            <a href="https://www.instagram.com/odhavdevelopers/" target="_blank"
+              ><i class="fab fa-instagram"></i
             ></a>
             <a
               href="https://www.linkedin.com/in/vapis-vip-b45792365?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=ios_app"
               target="_blank"
               ><i class="fab fa-linkedin-in"></i
             ></a>
-            <a href="https://www.behance.com/"
-              ><i class="fab fa-behance"></i
-            ></a>
-            <a href="https://www.vimeo.com/"><i class="fab fa-vimeo-v"></i></a>
           </div>
         </div>
       </div>
@@ -411,7 +405,7 @@
                 <div class="header-logo">
                   <a href="index.html">
                     <img
-                      src="assets/img/VVIP logo-01.png"
+                      src="assets/img/VVIP full gold-01.png"
                       alt="VVIP"
                       style="height: 100px"
                     />
@@ -1645,7 +1639,9 @@ Contact Area
                 <div class="about-contact-details">
                   <h6 class="about-contact-details-title">Our Address</h6>
 
-                  <p class="about-contact-details-text">Vapi</p>
+                  <p class="about-contact-details-text">
+                    Silvassa Vapi Rd, Imran Nagar, Daman, Vapi, Gujarat 396191
+                  </p>
                 </div>
               </div>
             </div>
@@ -1657,7 +1653,7 @@ Contact Area
                 <div class="about-contact-details">
                   <h6 class="about-contact-details-title">Phone Number</h6>
                   <p class="about-contact-details-text">
-                    <a href="tel:9913400000">+91 9913400000</a>
+                    <a href="tel:+91 90813 37700">+91 90813 37700</a>
                   </p>
                 </div>
               </div>
@@ -1793,7 +1789,9 @@ Contact Area
                   <div class="th-widget-about">
                     <div class="about-logo">
                       <a href="index.html"
-                        ><img src="assets/img/VVIP logo-01.png" alt="Realar"
+                        ><img
+                          src="assets/img/VVIP full gold-01.png"
+                          alt="VapisVipLogo"
                       /></a>
                     </div>
                     <p class="about-text">
@@ -1807,17 +1805,13 @@ Contact Area
                         target="_blank"
                         ><i class="fab fa-facebook-f"></i
                       ></a>
-                      <a href="https://www.twitter.com/"
-                        ><i class="fab fa-twitter"></i
-                      ></a>
+
                       <a
                         href="https://www.linkedin.com/in/vapis-vip-b45792365?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=ios_app"
                         target="_blank"
                         ><i class="fab fa-linkedin-in"></i
                       ></a>
-                      <a href="https://www.youtube.com/"
-                        ><i class="fab fa-youtube"></i
-                      ></a>
+
                       <a
                         href="https://www.instagram.com/odhavdevelopers/"
                         target="_blank"
@@ -1836,7 +1830,11 @@ Contact Area
                         <img src="assets/img/icon/location-dot.svg" alt="img" />
                       </div>
                       <div class="details">
-                        <p>Vapi,</p>
+                        <p>location</p>
+                        <p>
+                          Silvassa Vapi Rd, Imran Nagar, Daman, Vapi, Gujarat
+                          396191
+                        </p>
                       </div>
                     </div>
                     <div class="info-box_text">
@@ -1844,14 +1842,10 @@ Contact Area
                         <img src="assets/img/icon/phone.svg" alt="img" />
                       </div>
                       <div class="details">
+                        <p>Phone</p>
                         <p>
-                          <a href="tel:+91 99137058" class="info-box_link"
-                            >+91 991370584</a
-                          >
-                        </p>
-                        <p>
-                          <a href="tel:+91 99137058" class="info-box_link"
-                            >+91 991370584</a
+                          <a href="tel:+91 90813 37700" class="info-box_link"
+                            >+91 90813 37700</a
                           >
                         </p>
                       </div>
@@ -1861,9 +1855,10 @@ Contact Area
                         <img src="assets/img/icon/envelope.svg" alt="img" />
                       </div>
                       <div class="details">
+                        <p>Mail</p>
                         <p>
-                          <a href="mailto:VVIP.com" class="info-box_link"
-                            >VVIP.com</a
+                          <a href="mailto:mail@VVIP.com" class="info-box_link"
+                            >mail@VVIP.com</a
                           >
                         </p>
                       </div>
