changed button type to submit in main form

--- a/index.html
+++ b/index.html
@@ -1744,7 +1744,7 @@ Contact Area
                       ></textarea>
                     </div>
                     <div class="col-12 form-btn mt-4">
-                      <button class="th-btn">
+                      <button class="th-btn" type="submit">
                         Submit Message
                         <span class="btn-icon"
                           ><img src="assets/img/icon/paper-plane.svg" alt="img"
