changes aminities image into webp

--- a/index.html
+++ b/index.html
@@ -101,21 +101,6 @@
         href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&family=Outfit:wght@400;500;600&display=swap"
     /></noscript>
 
-    <style>
-      .preloader {
-        position: fixed;
-        top: 0;
-        left: 0;
-        width: 100%;
-        height: 100%;
-        background: #fff;
-        z-index: 9999;
-        display: flex;
-        align-items: center;
-        justify-content: center;
-      }
-    </style>
-
     <!-- Non-critical CSS -->
     <link
       rel="stylesheet"
@@ -901,9 +886,7 @@ Service Area
               </div>
               <div class="box-content">
                 <h3 class="box-title">
-                  <a href="property-details.html"
-                    >Tower A's Dedicated Retail Showrooms.
-                  </a>
+                  <a href="">Tower A's Dedicated Retail Showrooms. </a>
                 </h3>
                 <p class="box-text" style="text-align: justify">
                   a curated space where luxury brands meet discerning buyers in
@@ -922,7 +905,7 @@ Service Area
               </div>
               <div class="box-content">
                 <h3 class="box-title">
-                  <a href="property-details.html"
+                  <a href=""
                     >Tower - B Vapi’s Most Advanced Healthcare & Hospitality Hub
                   </a>
                 </h3>
@@ -1247,7 +1230,7 @@ Property Area
               >
                 <div class="aminities-card-img">
                   <img
-                    src="assets/img/custom-icons/images/gallery-room-with-artistic-murals-gallery-lighting.jpg"
+                    src="assets/img/aminities/website photos-10.webp"
                     alt="aminities image"
                   />
                 </div>
@@ -1265,7 +1248,7 @@ Property Area
 
             <div class="swiper-slide">
               <a
-                href="property-details.html"
+                href=""
                 class="aminities-card"
                 data-mask-src="assets/img/theme-img/aminities-shape1.png"
               >
@@ -1289,13 +1272,13 @@ Property Area
 
             <div class="swiper-slide">
               <a
-                href="property-details.html"
+                href=""
                 class="aminities-card"
                 data-mask-src="assets/img/theme-img/aminities-shape1.png"
               >
                 <div class="aminities-card-img">
                   <img
-                    src="assets/img/custom-icons/images/full-car-parking-lot-mall.jpg"
+                    src="assets/img/aminities/website photos-04.webp"
                     alt="aminities image"
                   />
                 </div>
@@ -1313,13 +1296,13 @@ Property Area
 
             <div class="swiper-slide">
               <a
-                href="property-details.html"
+                href=""
                 class="aminities-card"
                 data-mask-src="assets/img/theme-img/aminities-shape1.png"
               >
                 <div class="aminities-card-img">
                   <img
-                    src="assets/img/custom-icons/images/shutterstock_1715110129.jpg"
+                    src="assets/img/aminities/website photos-02.webp"
                     alt="aminities image"
                   />
                 </div>
@@ -1337,7 +1320,7 @@ Property Area
 
             <div class="swiper-slide">
               <a
-                href="property-details.html"
+                href=""
                 class="aminities-card"
                 data-mask-src="assets/img/theme-img/aminities-shape1.png"
               >
@@ -1361,13 +1344,13 @@ Property Area
 
             <div class="swiper-slide">
               <a
-                href="property-details.html"
+                href=""
                 class="aminities-card"
                 data-mask-src="assets/img/theme-img/aminities-shape1.png"
               >
                 <div class="aminities-card-img">
                   <img
-                    src="assets/img/custom-icons/images/steptodown.com128605.jpg"
+                    src="assets/img/aminities/website photos-01.webp"
                     alt="aminities image"
                   />
                 </div>
@@ -1385,13 +1368,13 @@ Property Area
 
             <div class="swiper-slide">
               <a
-                href="property-details.html"
+                href=""
                 class="aminities-card"
                 data-mask-src="assets/img/theme-img/aminities-shape1.png"
               >
                 <div class="aminities-card-img">
                   <img
-                    src="assets/img/custom-icons/images/shutterstock_788649655.jpg"
+                    src="assets/img/aminities/website photos-05.webp"
                     alt="aminities image"
                   />
                 </div>
@@ -1409,13 +1392,13 @@ Property Area
 
             <div class="swiper-slide">
               <a
-                href="property-details.html"
+                href=""
                 class="aminities-card"
                 data-mask-src="assets/img/theme-img/aminities-shape1.png"
               >
                 <div class="aminities-card-img">
                   <img
-                    src="assets/img/custom-icons/images/shutterstock_1321664345.jpg"
+                    src="assets/img/aminities/website photos-03.webp"
                     alt="aminities image"
                   />
                 </div>
@@ -1433,7 +1416,7 @@ Property Area
 
             <div class="swiper-slide">
               <a
-                href="property-details.html"
+                href=""
                 class="aminities-card"
                 data-mask-src="assets/img/theme-img/aminities-shape1.png"
               >
@@ -1462,7 +1445,7 @@ Property Area
               >
                 <div class="aminities-card-img">
                   <img
-                    src="assets/img/custom-icons/images/shallow-focus-shot-two-males-walking-along-bright-corridor.jpg"
+                    src="assets/img/aminities/website photos-07.webp"
                     alt="aminities image"
                   />
                 </div>
@@ -1480,13 +1463,13 @@ Property Area
 
             <div class="swiper-slide">
               <a
-                href="property-details.html"
+                href=""
                 class="aminities-card"
                 data-mask-src="assets/img/theme-img/aminities-shape1.png"
               >
                 <div class="aminities-card-img">
                   <img
-                    src="assets/img/custom-icons/images/portrait-male-security-guard-with-uniform.jpg"
+                    src="assets/img/aminities/website photos-08.webp"
                     alt="aminities image"
                   />
                 </div>
@@ -1504,13 +1487,13 @@ Property Area
 
             <div class="swiper-slide">
               <a
-                href="property-details.html"
+                href=""
                 class="aminities-card"
                 data-mask-src="assets/img/theme-img/aminities-shape1.png"
               >
                 <div class="aminities-card-img">
                   <img
-                    src="assets/img/custom-icons/images/shutterstock_1517745107.jpg"
+                    src="assets/img/aminities/website photos-11.webp"
                     alt="aminities image"
                   />
                 </div>
